@@ -1,3 +1,4 @@
+* Warn when incoterm on shipment is different from its origins
 
 Version 7.2.0 - 2024-04-29
 --------------------------
